--- a/books/850b20937af93b/3-2.md
+++ b/books/850b20937af93b/3-2.md
@@ -2,11 +2,11 @@
 title: "3.2 グラフ"
 ---
 
-単に対象たちを矢印で結ぶことによって圏を構築することができる。どんな有向グラフからであってもそのグラフに単に射を追加することによって圏を作ることを想像できるだろう。まず初めに、各頂点に恒等射を追加する。次に二つの射の組で片方の終点がもう一方の始点に一致するもの（言い換えると、任意の**合成可能**(composable)な射の組）があれば、
-それらの結合となるような新しい射を追加する。新しい射を追加したらいつも、他の任意の射（ただし恒等射は除く）との合成についても考えなければならない。結果的に無限個の射を追加することになることがよくあるが、問題はない。
+与えられた対象たちを射で結ぶことで圏を構築することができる．任意の有向グラフから，そのグラフに射を追加して圏を作ることを想像してみよう．初めに，各頂点に恒等射を追加する．次に，二つの射の組で片方の終点がもう一方の始点に一致するもの（言い換えると**合成可能** (composable) な射の組）があれば，
+それらの合成となる新しい射を追加する．新しい射を追加したらいつも，他の任意の射（ただし恒等射は除く）との合成についても考えなければならない．通常，最終的に無限個の射を追加することになるが，問題はない．
 
-この過程について見るもう一つの方法は、対象として与えられたグラフの各頂点を持ち、グラフの全ての合成可能な辺の**列**(chain)を射として持つような圏を作るというものである。（恒等射は長さ0の列という特別なものであるとみなすことができる。）
+この過程は，与えられたグラフの各頂点を対象に持ち，グラフの全ての合成可能な辺の**列** (chain)を射として持つような圏を作っていると見ることができる．（恒等射は特に長さ 0 の列とみなせる．）
 
-そのような圏を与えられたグラフから生成された**自由圏**(free category)と呼ぶ。これは自由構成、つまり最小限のものを加えての一つの例である。これから先、そのような構成の例をさらに見ていく。
+このような圏を，与えられたグラフから生成された**自由圏** (free category) と呼ぶ．これは自由構成，つまり最小限のものを加えて構造を完成させる過程の一つの例である．これから先，そのような構成例をさらに見ていく．
 
 （和訳：[@unaoya](https://zenn.dev/unaoya)）
