--- a/books/850b20937af93b/12-2.md
+++ b/books/850b20937af93b/12-2.md
@@ -6,7 +6,7 @@ title: "12.2 極限の例"
 
 極限の例にはもっとずっと簡単なものがある: 終対象だ．すぐに想像するのはシングルトン圏が終対象を導くということだろうが，真実はもっとずっと飾り気のないものだ: 終対象は空圏(empty category)から生成される．空圏からの関手は何の対象も選ばず，したがって錐はただの頂点に収縮する．普遍錐はどの他の頂点からもそこに来る唯一の射を持つような孤独な頂点である．これが終対象の定義であることはわかるだろう．
 
-次の面白い極限は **イコライザ(equalizer)** とよばれる．これは2つの対象とそれらの間を走る2つの並行な射(といつもどおり，恒等射たち)のなす圏から生成される極限である．この圏は2つの対象$a$と$b$，そして2つの射からなるような図式を$\mathbb{C}$のなかから選ぶ:
+次の面白い極限は **イコライザ(equalizer)** とよばれる．これは2つの対象とそれらの間を走る2つの並行な射(といつもどおり，恒等射たち)のなす圏から生成される極限である．この圏は2つの対象$a$と$b$，そして2つの射からなるような図式を$\mathbf{C}$のなかから選ぶ:
 
 $$
 f \mathtt{::}\   a \to b\\
