--- a/books/850b20937af93b/12-4.md
+++ b/books/850b20937af93b/12-4.md
@@ -2,21 +2,21 @@
 title: "12.4 連続性"
 ---
 
-以前に，関手は圏の連続写像の概念に近いということを述べ，それはすでにある接続(射)を決して破壊しないという意味であった．圏$\mathbb{C}$から$\mathbb{C}'$への **連続関手(continuous functor)** $F$の実際の定義は，その関手が極限を保つという要請を含んでいる．$\mathbb{C}$の全ての図式$D$は，単に2つの関手を合成することによって$\mathbb{C}'$の図式$F\circ D$に写される．$F$についての連続性条件は，もし図式$D$が極限$\mathrm{Lim}[D]$を持つなら図式$F\circ D$も極限を持ち，それは$F (\mathrm{Lim}[D])$に等しいということを言っている．
+以前に，関手は圏の連続写像の概念に近いということを述べ，それはすでにある接続(射)を決して破壊しないという意味であった．圏$\mathbf{C}$から$\mathbf{C}'$への **連続関手(continuous functor)** $F$の実際の定義は，その関手が極限を保つという要請を含んでいる．$\mathbf{C}$の全ての図式$D$は，単に2つの関手を合成することによって$\mathbf{C}'$の図式$F\circ D$に写される．$F$についての連続性条件は，もし図式$D$が極限$\mathrm{Lim}[D]$を持つなら図式$F\circ D$も極限を持ち，それは$F (\mathrm{Lim}[D])$に等しいということを言っている．
 
 ![](https://storage.googleapis.com/zenn-user-upload/frg349rd9auoksdsncu9v8f6r0ml)
 
-関手は射を射に，合成を合成に写すので，錐の像は常に錐であることに注意しよう．可換な三角形は常に可換な三角形に写される(関手は合成を保つのだ)．同じことが射の分解についても真である: 分解射の像はまた分解射である．なので，すべての関手は **ほとんど** 連続である．おかしくなるかもしれないのは唯一性条件である．$\mathbb{C}'$の分解射は唯一ではないかもしれない．また，$\mathbb{C}'$に$\mathbb{C}$にはなかった他の「より良い錐」があるかもしれない．
+関手は射を射に，合成を合成に写すので，錐の像は常に錐であることに注意しよう．可換な三角形は常に可換な三角形に写される(関手は合成を保つのだ)．同じことが射の分解についても真である: 分解射の像はまた分解射である．なので，すべての関手は **ほとんど** 連続である．おかしくなるかもしれないのは唯一性条件である．$\mathbf{C}'$の分解射は唯一ではないかもしれない．また，$\mathbf{C}'$に$\mathbf{C}$にはなかった他の「より良い錐」があるかもしれない．
 
-Hom関手は連続関手の一例である．Hom関手$\mathbb{C}(a, b)$は1つ目の変数について反変で，2つ目の変数について共変であることを思い出そう．言い換えると，これは関手
+Hom関手は連続関手の一例である．Hom関手$\mathbf{C}(a, b)$は1つ目の変数について反変で，2つ目の変数について共変であることを思い出そう．言い換えると，これは関手
 
 $$
-\mathbb{C}^{op} \times \mathbb{C} \to \mathrm{Set}
+\mathbf{C}^{op} \times \mathbf{C} \to \mathrm{Set}
 $$
 
 である．
 
-2つ目の引数が固定されると，この(表現可能前層となる)Hom集合関手は$\mathbb{C}$の余極限を$\mathbf{Set}$の極限に写す．そして1つ目の引数が固定されると，これは極限を極限に写す．
+2つ目の引数が固定されると，この(表現可能前層となる)Hom集合関手は$\mathbf{C}$の余極限を$\mathbf{Set}$の極限に写す．そして1つ目の引数が固定されると，これは極限を極限に写す．
 
 Haskellでは，Hom関手は2つの型を関数型に写す写像であり，したがってパラメタ付けられた関数型である．2つ目の引数(`String`ということにしよう)を固定すると，反変関手
 
