--- a/books/850b20937af93b/13-0.md
+++ b/books/850b20937af93b/13-0.md
@@ -4,14 +4,9 @@ title: "13.0 自由モノイド"
 
 原文：[3. Free Monoids ](https://bartoszmilewski.com/2015/07/21/free-monoids/)
 
-% !TEX root = ../../ctfp-print.tex
+モノイドは圏論とプログラミングの両方で重要な概念だ。圏論は強い型付け言語に対応し、モノイドは型なし言語に対応する。これは、モノイドにおいてはどの2つの関数も合成でき、これがちょうど型なし言語において任意の2つの関数を合成できるのと同じだからである(もちろん、プログラムを実行するときにランタイムエラーという結末になるかもしれない)。
 
-\lettrine[lhang=0.17]{M}{onoids are an important} concept in both category
-theory and in programming. Categories correspond to strongly typed languages, 
-monoids to untyped languages. That's because in a monoid you can compose any
-two arrows, just as in an untyped language you can compose any two functions
-(of course, you may end up with a runtime error when you execute your
-program).
+
 
 We've seen that a monoid may be described as a category with a single
 object, where all logic is encoded in the rules of morphism composition.
