--- a/books/850b20937af93b/12-0.md
+++ b/books/850b20937af93b/12-0.md
@@ -28,9 +28,9 @@ title: "12.0 極限と余極限"
 
 この構成を$\bf 2$の他の圏 --- 例えば非自明な射を含むような圏 --- に拡張するには，$\Delta_c$と$D$との間の変換に自然性の条件を課さなければいけなくなるだろう．そのような変換を **錐(cone)** と呼ぶ．なぜなら，$\Delta$の像が，自然変換の要素によって側面をなすような錐(あるいはピラミッド)の頂点になっているからである．
 
-一般に，錐を作るには，パターンを定義するための圏$\mathbb{I}$から始める．これは小さい圏で，しばしば有限圏である．次に，$\mathbb{I}$から$\bf C$への関手$D$を選び，それ(あるいはその像)を **図式(diagram)** とよぶ．次に，$\mathbf{C}$から何か$c$を錐の頂点として選ぶ．それを使って，$\mathbb{I}$から$\mathbf{C}$への定数関手$\Delta_c$を定義する．すると，$\Delta_c$から$D$への自然変換が錐である．有限の$\mathbb{I}$については，錐は単に$c$と図式($I$の$D$での像)を繋ぐ射を集めたものに過ぎない．
+一般に，錐を作るには，パターンを定義するための圏$\mathbf{I}$から始める．これは小さい圏で，しばしば有限圏である．次に，$\mathbf{I}$から$\bf C$への関手$D$を選び，それ(あるいはその像)を **図式(diagram)** とよぶ．次に，$\mathbf{C}$から何か$c$を錐の頂点として選ぶ．それを使って，$\mathbf{I}$から$\mathbf{C}$への定数関手$\Delta_c$を定義する．すると，$\Delta_c$から$D$への自然変換が錐である．有限の$\mathbf{I}$については，錐は単に$c$と図式($I$の$D$での像)を繋ぐ射を集めたものに過ぎない．
 
-自然性はこの図式の全ての三角形(ピラミッドの壁)を可換にすることを要請する．$\mathbb{I}$の射$f$を取る．関手$D$はこの射を圏$\mathbf{C}$の射$D f$に写し，それは三角形の底辺をなす．定数関手$\Delta_c$は$f$を$c$の恒等射に写す．$\Delta$はこの射の両端を1つの対象につぶし，自然性でできる四角形は可換な三角形となる．この三角形の両腕は自然変換の成分となる．
+自然性はこの図式の全ての三角形(ピラミッドの壁)を可換にすることを要請する．$\mathbf{I}$の射$f$を取る．関手$D$はこの射を圏$\mathbf{C}$の射$D f$に写し，それは三角形の底辺をなす．定数関手$\Delta_c$は$f$を$c$の恒等射に写す．$\Delta$はこの射の両端を1つの対象につぶし，自然性でできる四角形は可換な三角形となる．この三角形の両腕は自然変換の成分となる．
 
 ![](https://storage.googleapis.com/zenn-user-upload/nbpkvxm08k79rqhc51fv9auro2dz)
 
