--- a/books/850b20937af93b/12-1.md
+++ b/books/850b20937af93b/12-1.md
@@ -47,13 +47,13 @@ $$
 f \mathtt{::}\  c' \to c
 $$
 
-$f$の持ち上げは$\mathbb{I}$から$\mathbf{C}$への2つの関手の間の自然変換たちの写像でなければならない:
+$f$の持ち上げは$\mathbf{I}$から$\mathbf{C}$への2つの関手の間の自然変換たちの写像でなければならない:
 
 $$
 \mathrm{Nat}(\Delta_c, D) \to \mathrm{Nat}(\Delta_{c'}, D)
 $$
 
-どうやったら自然変換たちを写せるだろう？全ての自然変換は射たちを --- その成分を --- $\mathbb{I}$の元ごとに1つ選ぶことである．$\alpha$($\mathrm{Nat}(\Delta_c, D)$の元)の$a$($\mathbb{I}$の対象)での成分は射:
+どうやったら自然変換たちを写せるだろう？全ての自然変換は射たちを --- その成分を --- $\mathbf{I}$の元ごとに1つ選ぶことである．$\alpha$($\mathrm{Nat}(\Delta_c, D)$の元)の$a$($\mathbf{I}$の対象)での成分は射:
 
 $$
 \alpha_a \mathtt{::}\  \Delta_c a \to D a
@@ -93,7 +93,7 @@ $$
 
 ちなみに，1つ目の関手は圏論で重要な役割を果たし，この関手を米田の補題の話をするときに再び見ることになる．任意の圏$\mathbf{C}$から$\mathrm{Set}$への反変関手には名前がある: これらは「前層(presheaf)」とよばれる．この関手は **表現可能前層(representable presheaf)** とよばれる．2つめの関手もまた前層とよばれる．
 
-いま，2つの関手があるのでそれらの間の自然変換の話をすることができる．これ以上の面倒なことなしに，結論を述べよう: $\mathbb{I}$から$\mathbf{C}$への関手$D$が極限$\mathrm{Lim}[D]$を持つのは，さっき定義した2つの関手の間に自然同型
+いま，2つの関手があるのでそれらの間の自然変換の話をすることができる．これ以上の面倒なことなしに，結論を述べよう: $\mathbf{I}$から$\mathbf{C}$への関手$D$が極限$\mathrm{Lim}[D]$を持つのは，さっき定義した2つの関手の間に自然同型
 
 $$
 \mathbf{C}(c, \mathrm{Lim}[D]) \simeq \mathrm{Nat}(\Delta_c, D)
