--- a/books/850b20937af93b/13-0.md
+++ b/books/850b20937af93b/13-0.md
@@ -6,66 +6,19 @@ title: "13.0 自由モノイド"
 
 モノイドは圏論とプログラミングの両方で重要な概念だ。圏論は強い型付け言語に対応し、モノイドは型なし言語に対応する。これは、モノイドにおいてはどの2つの関数も合成でき、これがちょうど型なし言語において任意の2つの関数を合成できるのと同じだからである(もちろん、プログラムを実行するときにランタイムエラーという結末になるかもしれない)。
 
+これまで、モノイドは1つの対象の圏として記述できることを見てきており、モノイドの規則は射の合成の条件にエンコードできるのだった。この圏論的モデルは、モノイドのもっと伝統的な集合論的定義と完全に同値である。この定義は、集合の2つの元を「かけ算」すると3つ目の元が得られるというものだった。この「かけ算」の過程はさらに、まず集合のペアをつくり、そしてすでに存在する(「積」になる)元とこのペアとを同一視するという2段階に分解することができる。
 
+このかけ算の第2段階(ペアをとすでに存在する元と同一視する段階)をなくしてみると何がおこるだろう？具体的には、任意の集合から始めて、ありうる元のペアを全て作り、そしてそれらを新しい元とよぶのだ。そしてそれら新しい元と全てのありうる元とをペアにして、と続ける。これは連鎖反応である。この新しい元を加えるとことを永遠に続けるのだ。この結果(無限集合になる)は、 **ほどんど** モノイドである。しかし、モノイドには単位元と結合則も必要なはずだ。問題ない。特別な単位元をつけ加えて、いくらかのペアを同一視すればよい。これでちょうど、単位元と結合則をサポートするようになる。
 
-We've seen that a monoid may be described as a category with a single
-object, where all logic is encoded in the rules of morphism composition.
-This categorical model is fully equivalent to the more traditional
-set-theoretical definition of a monoid, where we ``multiply'' two
-elements of a set to get a third element. This process of
-``multiplication'' can be further dissected into first forming a pair of
-elements and then identifying this pair with an existing element ---
-their ``product.''
+これがどんな風になるかを簡単な例で見てみよう。2元集合$\{a, b\}$から始めよう。これらを自由モノイドの生成元とよぶ。まず、単位元の役割をする特別な元$e$をつけ加える。次に、元のペアをすべてつけ加え、それらを「積」とよぶ。$a$と$b$との積はペア$(a, b)$である。$b$と$a$との積はペア$(b, a)$であり、$a$と$a$との積は$(a, a)$であり、$b$と$b$との積は$(b, b)$である。$e$とペアを作ることもでき、$(a, e)$や$(e, b)$などのようになるが、これらは$a$や$b$と同一視する。この回では、$(a, a), (a, b), (b, a), (b, b)$だけをつけ加えることになり、集合$\{e, a, b, (a, a), (a, b), (b, a), (b, b)\}$で終わりになる。
 
-What happens when we forgo the second part of multiplication --- the
-identification of pairs with existing elements? We can, for instance,
-start with an arbitrary set, form all possible pairs of elements, and
-call them new elements. Then we'll pair these new elements with all
-possible elements, and so on. This is a chain reaction --- we'll keep
-adding new elements forever. The result, an infinite set, will be
-\emph{almost} a monoid. But a monoid also needs a unit element and the
-law of associativity. No problem, we can add a special unit element and
-identify some of the pairs --- just enough to support the unit and
-associativity laws.
+![](https://storage.googleapis.com/zenn-user-upload/f99xlq6ggsxyfrkuj3cj1s71y7vd)
 
-Let's see how this works in a simple example. Let's start with a set of
-two elements, $\{a, b\}$. We'll call them the generators of the
-free monoid. First, we'll add a special element $e$ to serve as
-the unit. Next we'll add all the pairs of elements and call them
-``products''. The product of $a$ and $b$ will be the pair
-$(a, b)$. The product of $b$ and $a$ will be the
-pair $(b, a)$, the product of $a$ with $a$ will be
-$(a, a)$, the product of $b$ with $b$ will be
-$(b, b)$. We can also form pairs with $e$, like
-$(a, e)$, $(e, b)$, etc., but we'll identify them with
-$a$, $b$, etc. So in this round we'll only add
-$(a, a)$, $(a, b)$ and $(b, a)$ and
-$(b, b)$, and end up with the set
-$\{e, a, b, (a, a), (a, b), (b, a), (b, b)\}$.
+次の回では、次のように元を追加しつづける: $(a, (a, b))$, $((a, b), a)$、などなど。この時点で、結合則がなりたつようにしなければならないので、$(a, (b, a))$と$((a, b), a)$とを同一視する、などなどをする。言い換えると、内側の括弧は我々にはいらないのである。
 
-\begin{figure}[H]
-\centering
-\includegraphics[width=0.8\textwidth]{images/bunnies.jpg}
-\end{figure}
+この過程の最終結果が何になるかは推測できるだろう: $a$と$b$のありうるすべてのリストを作ることになるのだ。実際、$e$が空リストを表現しているということにすると、この「かけ算」はリストの結合以外の何者でもない。
 
-\noindent
-In the next round we'll keep adding elements like:
-$(a, (a, b))$, $((a, b), a)$, etc. At this point we'll
-have to make sure that associativity holds, so we'll identify
-$(a, (b, a))$ with $((a, b), a)$, etc. In other words,
-we won't be needing internal parentheses.
-
-You can guess what the final result of this process will be: we'll
-create all possible lists of $a$s and $b$s. In fact, if we
-represent $e$ as an empty list, we can see that our
-``multiplication'' is nothing but list concatenation.
-
-This kind of construction, in which you keep generating all possible
-combinations of elements, and perform the minimum number of
-identifications --- just enough to uphold the laws --- is called a free
-construction. What we have just done is to construct a \newterm{free
-monoid} from the set of generators $\{a, b\}$.
-
+この種の、元のありうる組み合わせを作り続け(法則を守るための)最小限の同一視をする構成は、自由構成とよばれる。我々がいまやったのは、生成元の集合$\{a, b\}$から **自由モノイド** を構成するということだった。
 
 
 （和訳：[@ashiato45](https://twitter.com/ashiato45)）
