--- a/books/850b20937af93b/13-0.md
+++ b/books/850b20937af93b/13-0.md
@@ -16,7 +16,7 @@ title: "13.0 自由モノイド"
 
 次の回では、次のように元を追加しつづける: $(a, (a, b))$, $((a, b), a)$、などなど。この時点で、結合則がなりたつようにしなければならないので、$(a, (b, a))$と$((a, b), a)$とを同一視する、などなどをする。言い換えると、内側の括弧は我々にはいらないのである。
 
-この過程の最終結果が何になるかは推測できるだろう: $a$と$b$のありうるすべてのリストを作ることになるのだ。実際、$e$が空リストを表現しているということにすると、この「かけ算」はリストの結合以外の何者でもない。
+この過程の最終結果が何になるかは推測できるだろう: $a$と$b$のありうるすべてのリストを作ることになるのだ。実際、$e$が空リストを表現しているということにすると、この「かけ算」はリストの連結以外の何者でもない。
 
 この種の、元のありうる組み合わせを作り続け(法則を守るための)最小限の同一視をする構成は、自由構成とよばれる。我々がいまやったのは、生成元の集合$\{a, b\}$から **自由モノイド** を構成するということだった。
 
