--- a/books/850b20937af93b/13-1.md
+++ b/books/850b20937af93b/13-1.md
@@ -25,7 +25,7 @@ instance Monoid [a] where
     mappend = (++)
 ```
 
-これは、空リスト`[]`は単位元であり、リスト結合`(++)`は例の2引数操作であると言っている。
+これは、空リスト`[]`は単位元であり、リスト連結`(++)`は例の2引数操作であると言っている。
 
 ここまで見てきたように、`a`型のリストは集合`a`が生成元たちになっている自由モノイドに対応する。自然数集合をかけ算とともに考えたものは自由モノイドではない。なぜなら、たくさんの積を同一視してしまっているからだ。例えば次を比較してみよう:
 
