--- a/books/850b20937af93b/13-2.md
+++ b/books/850b20937af93b/13-2.md
@@ -3,141 +3,91 @@ title: "13.2 自由モノイドの普遍構成"
 ---
 
 
-\section{Free Monoid Universal Construction}
 
-If you recall our previous experiences with universal constructions, you
-might notice that it's not so much about constructing something as about
-selecting an object that best fits a given pattern. So if we want to use
-the universal construction to ``construct'' a free monoid, we have to
-consider a whole bunch of monoids from which to pick one. We need a
-whole category of monoids to choose from. But do monoids form a category?
+普遍構成のこれまでの経験を思い出してみれば、普遍構成というのは何かを構成することではなく、与えられたパターンに一番適合する対象を選ぶことだというのに気づくだろう。そうすると、自由モノイドを「構成」するのに普遍構成を使いたいなら、モノイドたちを束ねたもの全体というのを、その中から1つモノイドを選ぶために考えなければいけない。モノイド全体の圏というのが、そこから選び出すために必要である。でもモノイドたちは圏をなすのだろうか？
 
-Let's first look at monoids as sets equipped with additional structure
-defined by unit and multiplication. We'll pick as morphisms those
-functions that preserve the monoidal structure. Such
-structure-preserving functions are called \newterm{homomorphisms}. A monoid
-homomorphism must map the product of two elements to the product of the
-mapping of the two elements:
+まずはモノイドを、単位元とかけ算によって定義される追加構造を備えた集合であるとみなそう。射を、モノイド構造を保つような関数として選ぶ。そのような構造を保存する関数は **準同型(homomorphism)** とよばれる。モノイド準同型は、2つの元の積を2つの写った先の積に写さなければならない:
 
-\src{snippet04}
-and it must map unit to unit.
+$$
+h~(a * b) = h a * h b
+$$
 
-For instance, consider a homomorphism from lists of integers to
-integers. If we map \code{{[}2{]}} to 2 and \code{{[}3{]}} to 3, we
-have to map \code{{[}2, 3{]}} to 6, because concatenation
+さらに、単位元を単位元に写さなければいけない。
 
-\src{snippet05}
-becomes multiplication
+例えば、整数のリストから整数への準同型を考えよう。もし`[2]`を2に、`[3]`を3に写すのなら、`[2, 3]`を6に写さなければならない。なぜなら、結合
 
-\src{snippet06}
-Now let's forget about the internal structure of individual monoids, and
-only look at them as objects with corresponding morphisms. You get a
-category $\cat{Mon}$ of monoids.
+$$
+[2] ++ [3] = [2, 3]
+$$
 
-Okay, maybe before we forget about internal structure, let us notice an
-important property. Every object of $\cat{Mon}$ can be trivially mapped
-to a set. It's just the set of its elements. This set is called the
-\newterm{underlying} set. In fact, not only can we map objects of
-$\cat{Mon}$ to sets, but we can also map morphisms of $\cat{Mon}$
-(homomorphisms) to functions. Again, this seems sort of trivial, but it
-will become useful soon. This mapping of objects and morphisms from
-$\cat{Mon}$ to $\Set$ is in fact a functor. Since this functor
-``forgets'' the monoidal structure --- once we are inside a plain set,
-we no longer distinguish the unit element or care about multiplication
---- it's called a \newterm{forgetful functor}. Forgetful functors come up
-regularly in category theory.
+は積
 
-We now have two different views of $\cat{Mon}$. We can treat it just
-like any other category with objects and morphisms. In that view, we
-don't see the internal structure of monoids. All we can say about a
-particular object in $\cat{Mon}$ is that it connects to itself and to
-other objects through morphisms. The ``multiplication'' table of
-morphisms --- the composition rules --- are derived from the other view:
-monoids-as-sets. By going to category theory we haven't lost this view
-completely --- we can still access it through our forgetful functor.
+$$
+2 * 3 = 6
+$$
 
-To apply the universal construction, we need to define a special
-property that would let us search through the category of monoids and
-pick the best candidate for a free monoid. But a free monoid is defined
-by its generators. Different choices of generators produce different
-free monoids (a list of \code{Bool} is not the same as a list of
-\code{Int}). Our construction must start with a set of generators. So
-we're back to sets!
+になるからである。
 
-That's where the forgetful functor comes into play. We can use it to
-X-ray our monoids. We can identify the generators in the X-ray images of
-those blobs. Here's how it works:
+いま、個別のモノイドの内部構造を忘れて、モノイドたちを対応する射をもつ対象とだけ見よう。すると、モノイドの圏$\mathbf{Cat}$が得られる。
 
-We start with a set of generators, $x$. That's a set in
-$\Set$.
+よし、内部構造を忘れる前に重要な性質について注意しておこう。$\mathbf{Mon}$のすべての対象は自明に集合に写すことができる。その集合というのは、単にそのモノイドの元たちの集合である。この集合は **台集合(underlying set)**[^1] とよばれる。さらに、$\mathbf{Mon}$の対象を集合に写すだけでなく、$\mathbf{Mon}$の射(準同型)を関数に写すこともできる。やっぱりこれも当たり前の類のことに思えるが、これはすぐ有用になる。この対象と射とを$\mathbf{Cat}$から$\mathbf{Set}$に写すことは、実は関手なのである。この関手はモノイド構造を「忘れる」(一旦ただの集合に入りこんでしまうと、もう単位元がどれか区別したり、かけ算を考えたりできなくなる)ので、これは **忘却関手(forgetful functor)** とよばれる。忘却関手は圏論では定期的にあらわれる。
 
-The pattern we are going to match consists of a monoid $m$ --- an
-object of $\cat{Mon}$ --- and a function $p$ in $\Set$:
+いま、$\mathbf{Mon}$には2つの異なる見方がある。それを単に、他の圏と同じように対象と射のあるものとして扱うことができる。この視点では、モノイドの内部構造を見ることはできない。$\mathbf{Mon}$のある特定の対象について言えることは、それ自身と他の対象に射を通じて繋がっているということが全てである。射の「かけ算」表(合成の規則)は、もう一方の見方から導かれる: 集合としてのモノイドである。圏論に行ってしまっても、この見方を完全に失ってしまうわけではない。かけ算表には、忘却関手を通してアクセスすることができる。
 
-\src{snippet07}
-where $U$ is our forgetful functor from $\cat{Mon}$ to
-$\Set$. This is a weird heterogeneous pattern --- half in
-$\cat{Mon}$ and half in $\Set$.
 
-The idea is that the function $p$ will identify the set of
-generators inside the X-ray image of $m$. It doesn't matter that
-functions may be lousy at identifying points inside sets (they may
-collapse them). It will all be sorted out by the universal construction,
-which will pick the best representative of this pattern.
+普遍構成を適用するためには、モノイドの圏のなかを探し回って自由モノイドの最良の候補を選ぶための特別な性質を定義する必要がある。しかし、自由モノイドはその生成元たちで定義されるのである。生成元の異なる選択は異なる自由モノイドを作り出す(`Bool`のリストは`Int`のリストと同じではない)。構成は、生成元集合から始まらなければいけないのである。そうしたら集合に戻らなければ！
 
-\begin{figure}[H]
-\centering
-\includegraphics[width=0.4\textwidth]{images/monoid-pattern.jpg}
-\end{figure}
 
-\noindent
-We also have to define the ranking among candidates. Suppose we have
-another candidate: a monoid $n$ and a function that identifies
-the generators in its X-ray image:
+ここで忘却関手の出番だ。この忘却関手を、モノイドにX線照射するのに使うことができる。モノイド圏のよくわからない対象も、そのX線写真を見れば生成元を特定することができるのだ。こんな感じで機能する:
 
-\src{snippet08}
-We'll say that $m$ is better than $n$ if there is a
-morphism of monoids (that's a structure-preserving homomorphism):
+生成元の集合$x$からはじめよう。これは$\mathbf{Set}$の集合である。
 
-\src{snippet09}
-whose image under $U$ (remember, $U$ is a functor, so it
-maps morphisms to functions) factorizes through $p$:
+適合させたいパターンはモノイド$m$($\mathbf{Mon}$の対象)と、$\mathbf{Set}$の関数$p$からなる:
 
-\src{snippet10}
-If you think of $p$ as selecting the generators in $m$;
-and $q$ as selecting ``the same'' generators in $n$; then
-you can think of $h$ as mapping these generators between the two
-monoids. Remember that $h$, by definition, preserves the monoidal
-structure. It means that a product of two generators in one monoid will
-be mapped to a product of the corresponding two generators in the second
-monoid, and so on.
+$$
+p \mathtt{::}\   x \to U m
+$$
 
-\begin{figure}[H]
-\centering
-\includegraphics[width=0.4\textwidth]{images/monoid-ranking.jpg}
-\end{figure}
+ここで、$U$は$\mathbf{Mon}$から$\mathbf{Set}$への忘却関手である。これは奇妙な異種混合パターンである。半分は$\mathbf{Mon}$の話であり、半分は$\mathbf{Set}$の話なのである。
 
-\noindent
-This ranking may be used to find the best candidate --- the free monoid.
-Here's the definition:
+重要なアイデアは、関数$p$が$m$のX線写真のなかから生成元集合を指定するということである。関数というのは、集合のなかで点を指定するのは(関数は複数の値をつぶしてしまうかもしれないので)下手かもしれないが、それは問題にならない。その下手さは普遍構成で解決されるのである。普遍構成はパターンの候補たちのなかから最良のものを選んでくれるのだ。
 
-\begin{quote}
-We'll say that $m$ (together with the function $p$) is the
-\textbf{free monoid} with the generators $x$ if and only if there
-is a \emph{unique} morphism $h$ from $m$ to any other
-monoid $n$ (together with the function $q$) that satisfies
-the above factorization property.
-\end{quote}
-Incidentally, this answers our second question. The function
-$U h$ is the one that has the power to collapse multiple
-elements of $U m$ to a single element of $U n$. This
-collapse corresponds to identifying some elements of the free monoid.
-Therefore any monoid with generators $x$ can be obtained from the
-free monoid based on $x$ by identifying some of the elements. The
-free monoid is the one where only the bare minimum of identifications
-have been made.
+![](https://storage.googleapis.com/zenn-user-upload/phmgfj5gqsr8gl9jwryuvgv8kxcp)
 
-We'll come back to free monoids when we talk about adjunctions.
+さらに候補たちのなかでランキングを作らなくてはいけない。他にも候補が1つあったとしよう: モノイド$n$と、そのX線写真から生成元を特定してくれる関数$q$である:
 
+$$
+q \mathtt{::}\   x \to U n
+$$
+
+モノイドの射(これは構造を保つ準同型である)
+
+$$
+h \mathtt{::}\   m \to n
+$$
+
+が存在し、この$U$での像が$p$を通して因子分解する($U$は関手なので、射を関数に写すことを思い出そう):
+
+$$
+q = U h~.~p
+$$
+
+ときに、$m$は$n$よりも良いということにしよう。
+
+$p$が$m$のなかから生成元を選んでおり、$q$が$n$のなかから「同じ」生成元を選んでいると思うことにしよう。すると、$h$はこれら2つのモノイドの間でこれら生成元を写していると思うことができる。定義から、$h$はモノイド構造を保存していることを思い出そう。つまり、あるモノイドでの生成元の積は2つ目のモノイドでの対応する2つの生成元の積に写される、などなどが成り立つのだ。
+
+![](https://storage.googleapis.com/zenn-user-upload/offknse9k865oqjjrz5b771sxbfa)
+
+このランキングは最良の候補 --- 自由モノイド --- を見つけるのに使うことができる。これが定義だ:
+
+> $m$(と関数$p$)が$x$を生成元とする **自由モノイド** であるとは、 先の因子分解の性質をみたすような、$m$から他のモノイド$n$(と関数$q$)への射$h$が **唯一つ** 存在することである。
+
+偶然にも、これは2番目の質問[^2]にも答えている。関数$U h$は$U m$の複数の元を$U n$のある1つの元につぶす力を持っている。このつぶしは、自由モノイドのいくらかの元を同一視することに対応している。したがって、$x$を生成元とするどんなモノイドも$x$に基づく自由モノイドから、いくらかの要素を同一視することによって得られる。自由モノイドは、本当に最小限の同一視だけがされたなされたモノイドなのである。
+
+随伴の話をするときに、また自由モノイドに戻ってくることにしよう。
+
+
+[^1]: 訳注: 底集合という訳語もあるみたいですが国語辞典と古い文献でしか出てこないので台集合にしました。
+[^2]: 訳注: 13章1節最後の「どんなモノイドもある自由モノイドから、モノイドの法則で要求されている最小の元たちよりたくさんの元たちを同一視することによって得られるのだろうか」です。
 
 （和訳：[@ashiato45](https://twitter.com/ashiato45)）
