--- a/books/850b20937af93b/5-1.md
+++ b/books/850b20937af93b/5-1.md
@@ -8,12 +8,12 @@ title: "5.1 始対象"
 
 ![](https://storage.googleapis.com/zenn-user-upload/9yh2mko2dgzl54x934t9fhi4ejhf)
 
-ところが，この定義は（もし存在したとしても）始対象の一意性すら保証しない．だが次善の，**同型を除く** (up to isomorphism) 一意性を保証する．同型は圏論でとても重要なので，後ほど簡単に説明する．一旦は，同型を除く一意性をもって始対象の定義を認めることとしよう．
+ところが，この定義は（もし存在したとしても）始対象の一意性すら保証しない．だが次善の，**同型を除く** (up to isomorphism) 一意性を保証する．同型は圏論でとても重要なので，後ほど簡単に説明する．一旦は，同型を除く一意性をもって始対象の定義を認めることとしよう．
 
 例を挙げよう．半順序集合の始対象はその最小要素である．例えば正と負の全ての整数の集合で，「
 等しいかそれ以下」という関係を射として持つもののように，いくつかの半順序集合は始対象をもたない．
 
-集合と関数の圏では，始対象は空集合である．空集合はHaskelの`Void`型にあたり（C++には対応する型がない），`Void`から任意の他の型への一意で多態的な関数は`absurd`と呼ばれることを思い出してほしい．
+集合と関数の圏では，始対象は空集合である．空集合はHaskelの`Void`型にあたり（C++には対応する型がない），`Void`から任意の他の型への一意で多態的な関数は`absurd`と呼ばれることを思い出してほしい．
 
 ```haskell
 absurd :: Void -> a
