--- a/books/850b20937af93b/5-3.md
+++ b/books/850b20937af93b/5-3.md
@@ -2,10 +2,10 @@
 title: "5.3 双対性"
 ---
 
-始対象と終対象の定義の仕方に対象性があることにお気づきだろう。二つの定義方法の違いは射の向きのみだ。実は、任意の圏 $\mathbf{C}$ についてその矢印を反転することにより、**反対圏** (opposite category) $\mathbf{C}^{op}$を定義することができる。同時に合成を再定義すれば、反対圏は自ずから圏の全ての要求を満たす。もし元々の射 $f :: a \to b$ と $g :: b \to c$ が $h = g \circ f$ として $h :: b \to c$ と合成されるとすると、反転した射 $f^{op} :: b \to a$ と $g^{op} :: c \to b$ は $h^{op} = f^{op} \circ g^{op}$ として $h^{op} :: c \to a$ と合成されるだろう。そして恒等射の反転は恒等射だ。
+始対象と終対象の定義の仕方に対象性があることにお気づきだろう．二つの定義方法の違いは射の向きのみだ．実は，任意の圏 $\mathbf{C}$ についてその矢印を反転することにより，**反対圏** (opposite category) $\mathbf{C}^{op}$を定義することができる．同時に合成を再定義すれば，反対圏は自ずから圏の全ての要求を満たす．もし元々の射 $f :: a \to b$ と $g :: b \to c$ が $h = g \circ f$ として $h :: b \to c$ と合成されるとすると，反転した射 $f^{op} :: b \to a$ と $g^{op} :: c \to b$ は $h^{op} = f^{op} \circ g^{op}$ として $h^{op} :: c \to a$ と合成されるだろう．そして恒等射の反転は恒等射だ．
 
-圏論について研究している全ての数学者の生産性を倍するので、双対性は圏のとても重要な性質だ。思いつく全ての構成について、その対となる構成が存在する。そして証明された全ての定理について、その対となる定理をただで手に入れることができる。反対圏での構成には、しばしば「余」を接頭語として用いる。積には余積、モナドには余モナド、錐には余錐、極限には余極限、など。だが射を二回反転するともとの状態に戻るので、「余余モナド」なるものはない。
+圏論について研究している全ての数学者の生産性を倍するので，双対性は圏のとても重要な性質だ．思いつく全ての構成について，その対となる構成が存在する．そして証明された全ての定理について，その対となる定理をただで手に入れることができる．反対圏での構成には，しばしば「余」を接頭語として用いる．積には余積，モナドには余モナド，錐には余錐，極限には余極限，など．だが射を二回反転するともとの状態に戻るので，「余余モナド」なるものはない．
 
-終対象は反対圏での始対象である。
+終対象は反対圏での始対象である．
 
 (和訳：[@dshin](https://zenn.dev/dshin))
