--- a/books/850b20937af93b/2-1.md
+++ b/books/850b20937af93b/2-1.md
@@ -9,6 +9,6 @@ title: "2.1 型は誰にとって必要？"
 
 問題は，我々は猿たちを喜ばせたいのか，または正しいプログラムを作りたいのかだ．
 
-タイピングモンキーの思考実験で通常設定されるゴールは，シェイクスピアの全作品を作り出すことだ．スペルチェッカーと文法チェッカーが動いていれば，いい線行っているものを大幅に増やしてくれるだろう^[原文："... would drastically increase the odds." 普通 "odds" は「変なもの」の意味だが，文脈的に「いい線行ってるもの」と訳した．誤訳かも知れない．]．加えて型チェッカーは，ロメオがちゃんと人間かどうかとか，葉っぱが生えてきたりしないかとか，強力な重力場の中に光子を閉じ込めてしまわないか，といったことのチェックに当たる．
+タイピングモンキーの思考実験で通常設定されるゴールは，シェイクスピアの全作品を作り出すことだ．スペルチェッカーと文法チェッカーが動いていれば，オッズを大幅に増やしてくれるだろう．加えて型チェッカーは，ロメオがちゃんと人間かどうかとか，葉っぱが生えてきたりしないかとか，強力な重力場の中に光子を閉じ込めてしまわないか，といったことのチェックに当たる．
 
 （和訳：[@taketo1024](https://zenn.dev/taketo1024)）
